Source/WebCore/testing/Internals.h
@@ -267,6 +267,9 @@ public:
     void setPageScaleFactor(float scaleFactor, int x, int y, ExceptionCode&);
     void setPageZoomFactor(float zoomFactor, ExceptionCode&);
 
+    void setUseFixedLayout(bool useFixedLayout, ExceptionCode&);
+    void setFixedLayoutSize(int width, int height, ExceptionCode&);
+
     void setHeaderHeight(float);
     void setFooterHeight(float);
 
